# FilterBank

./: .gitignore  CMakeLists.txt  Makefile  README.md
.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  filterbank2.data.json  filterbank2.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  typing_extensions.data.json  typing_extensions.meta.json
.mypy_cache/3.7/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.7/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.7/os/: __init__.data.json  __init__.meta.json  path.data.json  (+1 more)
.mypy_cache/3.8/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  filterbank.data.json  filterbank.meta.json  filterbank2.data.json  filterbank2.meta.json  filterbank3.data.json  filterbank3.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  plot_result.data.json  plot_result.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json
include/: fb_multi_channel_Impl.cuh  filterbank.h  filterbank.hpp  main.hpp
python/: chirp.py  combine_packets.py  filterbank.py  generate_data.py  generate_data_3channels.py  generate_fir_taps.py  generate_sine.py  plot_result.py  plot_result_from_tensor.py  taps.txt
python/files/: metadata  result  signal  sine  taps
source/: cuda.cu  cudaApp  fb_multi_channel.cu  fb_multi_channel_Impl.cu  fb_single_channel.cu  filterbank.cpp  main.cpp
(+12 files in other folders)
