CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(FilterBanks CXX)

SET(EXEC_TARGET fb)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

SET(HEADERS 
    ./include/main.h
    ./include/filterbank.h)

SET(SOURCES 
    ./source/main.cpp
    ./source/filterbank.cpp)

ADD_EXECUTABLE(${EXEC_TARGET} ${SOURCES} ${HEADERS})